# ways

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: azure-container-registry-publish-image.yml  azure-static-web-apps-icy-island-00ed8aa03.yml
client/: index.html  package-lock.json  package.json  staticwebapp.config.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/assets/: busy-hours.json  category-urls.tsx  placement.json
client/src/components/: ProximirtyProductPopup.tsx  a11-sheet.tsx  (+10 more)
server/: Dockerfile  main.py  pyproject.toml  redis_client.py  seed.py
server/api/endpoints/admin_auth/: admin_auth.py
server/api/endpoints/cart/: cart.py
server/api/endpoints/pathfinding/: pathfinding.py
server/api/endpoints/product/: product.py
server/api/endpoints/session/: session.py
server/api/endpoints/tile/: tile.py
server/api/routers/: admin_auth.py  api.py  cart.py  pathfinding.py  product.py  session.py  tile.py
server/data/: data.py
server/exampleData/: card_only_self_checkout.csv  cash_registers.csv  easter_eggs.csv  products.csv  self_checkout.csv  tiles.csv  walls.csv
server/helper/: astar.py  graph.py  pathfinding.py
server/migrations/models/: 0_20240624220015_init.py  0_20240625201845_init.py  1_20240625071209_update.py  1_20240625205734_update.py  2_20240627105252_update.py
server/models/: admin_session.py  product.py  session.py  tile.py  tile_type.py
server/services/: admin_auth_service.py  auth_service.py  product_service.py  tile_service.py
server/ws/endpoint/move/: move.py
server/ws/routes/: move.py  ws.py
(+26 files in other folders)
