[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Atanas Pozharliev <ABPozharliev19@codingburgas.bg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.3"}
aerich = "^0.7.2"
fastapi-sessions = "^0.3.2"
websockets = "^12.0"
aioredis = "^2.0.1"
redis = "^5.0.7"
redis-om = "^0.3.1"


[tool.aerich]
tortoise_orm = "data.data.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
